style: fix to contact form spacing

--- a/src/scss/_forms.scss
+++ b/src/scss/_forms.scss
@@ -164,6 +164,10 @@
   .section-heading {
     margin: 0;
   }
+
+  p {
+    margin: 0;
+  }
 }
 
 // Honeypot field - hide from real users
